--- a/index.html
+++ b/index.html
@@ -27,8 +27,107 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+    <div class="container-fluid">
     <!-- Timeblocks go here -->
+    <section>
+        <div class="row">
+            <div class="col-sm-12 col-md-1">
+                <h3>9</h3>
+            </div>
+            <input type="text" class="col-sm-12 col-md-10"id="task-9"/>
+            <button class="col-sm-12 col-md-1" id="save-button-9">
+                &#128190;
+            </button>
+        </div>
+    </section>
+    <section>
+        <div class="row">
+            <div class="col-sm-12 col-md-1">
+                <h3>10</h3>
+            </div>
+            <input type="text" class="col-sm-12 col-md-10"id="task-10"/>
+            <button class="col-sm-12 col-md-1" id="save-button-10">
+                &#128190;
+            </button>
+        </div>
+    </section>
+    <section>
+        <div class="row">
+            <div class="col-sm-12 col-md-1">
+                <h3>11</h3>
+            </div>
+            <input type="text" class="col-sm-12 col-md-10"id="task-11"/>
+            <button class="col-sm-12 col-md-1" id="save-button-11">
+                &#128190;
+            </button>
+        </div>
+    </section>
+    <section>
+        <div class="row">
+            <div class="col-sm-12 col-md-1">
+                <h3>12</h3>
+            </div>
+            <input type="text" class="col-sm-12 col-md-10"id="task-12"/>
+            <button class="col-sm-12 col-md-1" id="save-button-12">
+                &#128190;
+            </button>
+        </div>
+    </section>
+    <section>
+        <div class="row">
+            <div class="col-sm-12 col-md-1">
+                <h3>1</h3>
+            </div>
+            <input type="text" class="col-sm-12 col-md-10"id="task-1"/>
+            <button class="col-sm-12 col-md-1" id="save-button-1">
+                &#128190;
+            </button>
+        </div>
+    </section>
+    <section>
+        <div class="row">
+            <div class="col-sm-12 col-md-1">
+                <h3>2</h3>
+            </div>
+            <input type="text" class="col-sm-12 col-md-10"id="task-2"/>
+            <button class="col-sm-12 col-md-1" id="save-button-2">
+                &#128190;
+            </button>
+        </div>
+    </section>
+    <section>
+        <div class="row">
+            <div class="col-sm-12 col-md-1">
+                <h3>3</h3>
+            </div>
+            <input type="text" class="col-sm-12 col-md-10"id="task-3"/>
+            <button class="col-sm-12 col-md-1" id="save-button-3">
+                &#128190;
+            </button>
+        </div>
+    </section>
+    <section>
+        <div class="row">
+            <div class="col-sm-12 col-md-1">
+                <h3>4</h3>
+            </div>
+            <input type="text" class="col-sm-12 col-md-10" id="task-4"/>
+            <button class="col-sm-12 col-md-1" id="save-button-4">
+                &#128190;
+            </button>
+        </div>
+    </section>
+    <section>
+        <div class="row">
+            <div class="col-sm-12 col-md-1">
+                <h3>5</h3>
+            </div>
+            <input type="text" class="col-sm-12 col-md-10" id="task-5"/>
+            <button class="col-sm-12 col-md-1" id="save-button-5">
+                &#128190;
+            </button>
+        </div>
+    </section>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
