pre-iteration method/jQuery

--- a/index.html
+++ b/index.html
@@ -25,109 +25,92 @@
     <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
-    <p id="currentDay" class="lead"></p>
+    <p id="date-time"></p>
+    <h2 id="currentDay" class="lead"></h2>
     </header>
     <div class="container-fluid">
     <!-- Timeblocks go here -->
-    <section>
-        <div class="row">
+        <div class="row time-block">
             <div class="col-sm-12 col-md-1">
-                <h3>9</h3>
+                <h3>9 am</h3>
             </div>
-            <input type="text" class="col-sm-12 col-md-10"id="task-9"/>
+            <input type="text" class="col-sm-12 col-md-10" id="task-9"/>
             <button class="col-sm-12 col-md-1" id="save-button-9">
                 &#128190;
             </button>
         </div>
-    </section>
-    <section>
-        <div class="row">
+        <div class="row time-block">
             <div class="col-sm-12 col-md-1">
-                <h3>10</h3>
+                <h3>10 am</h3>
             </div>
-            <input type="text" class="col-sm-12 col-md-10"id="task-10"/>
+            <input type="text" class="col-sm-12 col-md-10" id="task-10"/>
             <button class="col-sm-12 col-md-1" id="save-button-10">
                 &#128190;
             </button>
         </div>
-    </section>
-    <section>
-        <div class="row">
+        <div class="row time-block">
             <div class="col-sm-12 col-md-1">
-                <h3>11</h3>
+                <h3>11 am</h3>
             </div>
-            <input type="text" class="col-sm-12 col-md-10"id="task-11"/>
+            <input type="text" class="col-sm-12 col-md-10" id="task-11"/>
             <button class="col-sm-12 col-md-1" id="save-button-11">
                 &#128190;
             </button>
         </div>
-    </section>
-    <section>
-        <div class="row">
+        <div class="row time-block">
             <div class="col-sm-12 col-md-1">
-                <h3>12</h3>
+                <h3>12 pm</h3>
             </div>
-            <input type="text" class="col-sm-12 col-md-10"id="task-12"/>
+            <input type="text" class="col-sm-12 col-md-10" id="task-12"/>
             <button class="col-sm-12 col-md-1" id="save-button-12">
                 &#128190;
             </button>
         </div>
-    </section>
-    <section>
-        <div class="row">
+        <div class="row time-block">
             <div class="col-sm-12 col-md-1">
-                <h3>1</h3>
+                <h3>1 pm</h3>
             </div>
-            <input type="text" class="col-sm-12 col-md-10"id="task-1"/>
-            <button class="col-sm-12 col-md-1" id="save-button-1">
+            <input type="text" class="col-sm-12 col-md-10" id="task-13"/>
+            <button class="col-sm-12 col-md-1" id="save-button-13">
                 &#128190;
             </button>
         </div>
-    </section>
-    <section>
-        <div class="row">
+        <div class="row time-block">
             <div class="col-sm-12 col-md-1">
-                <h3>2</h3>
+                <h3>2 pm</h3>
             </div>
-            <input type="text" class="col-sm-12 col-md-10"id="task-2"/>
-            <button class="col-sm-12 col-md-1" id="save-button-2">
+            <input type="text" class="col-sm-12 col-md-10" id="task-14"/>
+            <button class="col-sm-12 col-md-1" id="save-button-14">
                 &#128190;
             </button>
         </div>
-    </section>
-    <section>
-        <div class="row">
+        <div class="row time-block">
             <div class="col-sm-12 col-md-1">
-                <h3>3</h3>
+                <h3>3 pm</h3>
             </div>
-            <input type="text" class="col-sm-12 col-md-10"id="task-3"/>
-            <button class="col-sm-12 col-md-1" id="save-button-3">
+            <input type="text" class="col-sm-12 col-md-10" id="task-15"/>
+            <button class="col-sm-12 col-md-1" id="save-button-15">
                 &#128190;
             </button>
         </div>
-    </section>
-    <section>
-        <div class="row">
+        <div class="row time-block">
             <div class="col-sm-12 col-md-1">
-                <h3>4</h3>
+                <h3>4 pm</h3>
             </div>
-            <input type="text" class="col-sm-12 col-md-10" id="task-4"/>
-            <button class="col-sm-12 col-md-1" id="save-button-4">
+            <input type="text" class="col-sm-12 col-md-10" id="task-16"/>
+            <button class="col-sm-12 col-md-1" id="save-button-16">
                 &#128190;
             </button>
         </div>
-    </section>
-    <section>
-        <div class="row">
+        <div class="row time-block">
             <div class="col-sm-12 col-md-1">
-                <h3>5</h3>
+                <h3>5 pm</h3>
             </div>
-            <input type="text" class="col-sm-12 col-md-10" id="task-5"/>
-            <button class="col-sm-12 col-md-1" id="save-button-5">
+            <input type="text" class="col-sm-12 col-md-10" id="task-17"/>
+            <button class="col-sm-12 col-md-1" id="save-button-17">
                 &#128190;
             </button>
         </div>
-    </section>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
