fixed javascript backgrounds and working css

--- a/alt-index.html
+++ b/alt-index.html
@@ -27,8 +27,8 @@
     <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
-    <p id="date-time"></p>
-    <h2 id="currentDay" class="lead"></h2>
+    <h3 id="date-time"></h3>
+    <p id="currentDay" class="lead"></p>
     </header>
     <div class="container-fluid">
     <!-- Timeblocks go here -->
