--- a/index.html
+++ b/index.html
@@ -1,124 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Work Day Scheduler</title>
-        <link rel="stylesheet" src="./assets/css/reset.css"/>
-        <link
-          href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-          rel="stylesheet"
-        />
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-        <link
-          rel="stylesheet"
-          href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-          crossorigin="anonymous"
-        />
-        <link rel="stylesheet" src="./assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link 
+      rel="stylesheet"
+      href="./assets/css/reset.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Work Day Scheduler</title>
+  </head>
 
 </head>
 <body>
     <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
-    <p id="date-time"></p>
-    <h2 id="currentDay" class="lead"></h2>
+    <h3 id="date-time"></h3>
+    <p id="currentDay" class="lead"></p>
     </header>
     <div class="container-fluid">
     <!-- Timeblocks go here -->
-        <div class="row time-block">
-            <div class="col-sm-12 col-md-1">
-                <h3>9 am</h3>
+        <div class="row time-block" id="hour-9">
+            <div class="col-md-1 hour">
+                <p>9 am</p>
             </div>
-            <input type="text" class="col-sm-12 col-md-10" id="task-9"/>
-            <button class="col-sm-12 col-md-1" id="save-button-9">
-                &#128190;
+            <textarea type="text" class="col-md-10 task" id="task-9"></textarea>
+            <button class="col-md-1 saveBtn">
+                <i class='fa fa-save'></i>
             </button>
         </div>
-        <div class="row time-block">
-            <div class="col-sm-12 col-md-1">
-                <h3>10 am</h3>
+        <div class="row time-block" id="hour-10">
+            <div class="col-md-1 hour">
+                <p>10 am</p>
             </div>
-            <input type="text" class="col-sm-12 col-md-10" id="task-10"/>
-            <button class="col-sm-12 col-md-1" id="save-button-10">
-                &#128190;
+            <textarea type="text" class="col-md-10 task" id="task-10"></textarea>
+            <button class="col-md-1 saveBtn">
+                <i class='fa fa-save'></i>
             </button>
         </div>
-        <div class="row time-block">
-            <div class="col-sm-12 col-md-1">
-                <h3>11 am</h3>
+        <div class="row time-block" id="hour-11">
+            <div class="col-md-1 hour">
+                <p>11 am</p>
             </div>
-            <input type="text" class="col-sm-12 col-md-10" id="task-11"/>
-            <button class="col-sm-12 col-md-1" id="save-button-11">
-                &#128190;
+            <textarea type="text" class="col-md-10 task" id="task-11"></textarea>
+            <button class="col-md-1 saveBtn">
+                <i class='fa fa-save'></i>
             </button>
         </div>
-        <div class="row time-block">
-            <div class="col-sm-12 col-md-1">
-                <h3>12 pm</h3>
+        <div class="row time-block" id="hour-12">
+            <div class="col-md-1 hour">
+                <p>12 pm</p>
             </div>
-            <input type="text" class="col-sm-12 col-md-10" id="task-12"/>
-            <button class="col-sm-12 col-md-1" id="save-button-12">
-                &#128190;
+            <textarea type="text" class="col-md-10 task" id="task-12"></textarea>
+            <button class="col-md-1 saveBtn">
+                <i class='fa fa-save'></i>
             </button>
         </div>
-        <div class="row time-block">
-            <div class="col-sm-12 col-md-1">
-                <h3>1 pm</h3>
+        <div class="row time-block" id="hour-13">
+            <div class="col-md-1 hour">
+                <p>1 pm</p>
             </div>
-            <input type="text" class="col-sm-12 col-md-10" id="task-13"/>
-            <button class="col-sm-12 col-md-1" id="save-button-13">
-                &#128190;
+            <textarea type="text" class="col-md-10 task" id="task-13"></textarea>
+            <button class="col-md-1 saveBtn">
+                <i class='fa fa-save'></i>
             </button>
         </div>
-        <div class="row time-block">
-            <div class="col-sm-12 col-md-1">
-                <h3>2 pm</h3>
+        <div class="row time-block" id="hour-14">
+            <div class="col-md-1 hour">
+                <p>2 pm</p>
             </div>
-            <input type="text" class="col-sm-12 col-md-10" id="task-14"/>
-            <button class="col-sm-12 col-md-1" id="save-button-14">
-                &#128190;
+            <textarea type="text" class="col-md-10 task" id="task-14"></textarea>
+            <button class="col-md-1 saveBtn">
+                <i class='fa fa-save'></i>
             </button>
         </div>
-        <div class="row time-block">
-            <div class="col-sm-12 col-md-1">
-                <h3>3 pm</h3>
+        <div class="row time-block" id="hour-15">
+            <div class="col-md-1 hour">
+                <p>3 pm</p>
             </div>
-            <input type="text" class="col-sm-12 col-md-10" id="task-15"/>
-            <button class="col-sm-12 col-md-1" id="save-button-15">
-                &#128190;
+            <textarea type="text" class="col-md-10 task" id="task-15"></textarea>
+            <button class="col-md-1 saveBtn">
+                <i class='fa fa-save'></i>
             </button>
         </div>
-        <div class="row time-block">
-            <div class="col-sm-12 col-md-1">
-                <h3>4 pm</h3>
+        <div class="row time-block" id="hour-16">
+            <div class="col-md-1 hour">
+                <p>4 pm</p>
             </div>
-            <input type="text" class="col-sm-12 col-md-10" id="task-16"/>
-            <button class="col-sm-12 col-md-1" id="save-button-16">
-                &#128190;
+            <textarea type="text" class="col-md-10 task" id="task-16"></textarea>
+            <button class="col-md-1 saveBtn">
+                <i class='fa fa-save'></i>
             </button>
         </div>
-        <div class="row time-block">
-            <div class="col-sm-12 col-md-1">
-                <h3>5 pm</h3>
+        <div class="row time-block" id="hour-17">
+            <div class="col-md-1 hour">
+                <p>5 pm</p>
             </div>
-            <input type="text" class="col-sm-12 col-md-10" id="task-17"/>
-            <button class="col-sm-12 col-md-1" id="save-button-17">
-                &#128190;
+            <textarea type="text" class="col-md-10 task" id="task-17"></textarea>
+            <button class="col-md-1 saveBtn">
+                <i class='fa fa-save'></i>
             </button>
         </div>
     </div>
 
+   
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
-    <script src="./assets/js/alt-script.js"></script>
+    <script src="./assets/js/script.js"></script>
 
   </body>
 </html>
